bug 890691 - spdy latency problem with control refresh r=hurley